--- a/css/main.scss
+++ b/css/main.scss
@@ -65,11 +65,11 @@ section.TTC {
     background: url('../img/Startbild-HOME-min.jpg');
 
     max-width: 100%;
-    height: auto;
-
+    height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    margin-top: 2.3em;
 
     text-align: center;
     
@@ -92,18 +92,9 @@ section.TTC {
     }
 }
 
-.wrapper_body {
+.wrapper_body, .wrapper_about {
     background: url('../img/Hintergrund-HOME-zweite-Seite-min.jpg');
     background-size: cover;
-    padding-top: 5em;
-    padding-bottom: 5em;
-}
-
-.wrapper_about {
-    background: url('../img/Hintergrund-ABOUT-min.jpg');
-    height: 100%;
-    background-size: cover;
-    background-position: center;
     padding-top: 5em;
     padding-bottom: 5em;
 }
@@ -202,17 +193,33 @@ section.Members {
     }
 }
 
+section.Members {
+    text-align: center;
+}
+
+.contact_wrapper {
+    display: grid;
+    grid-template-columns: auto;
+}    
+
 section.contact {
     background: url('../img/Hintergrund-CONTACT-min.jpg');
     max-width: 100%;
-    height: auto;
+    height: 100vh;
     background-size: cover;
     background-position: center;
-    padding-top: 5em;
-    padding-bottom: 5em;
 
-    h3 {
-        letter-spacing: 0.1rem;
+    margin-top: 3em;
+
+    .contact_info {
+        text-align: center;
+        padding-top: 15em;
+        padding-bottom: 5em;
+        font-size: 1.3rem;
+
+        h3 {
+            letter-spacing: 0.1rem;
+        }
     }
 }
 
@@ -247,8 +254,8 @@ footer {
     }
 
     section.TTC {
-        padding-top: 10em;
-        padding-bottom: 17em;
+        //padding-top: 10em;
+        //padding-bottom: 17em;
 
         h1 {
             font-size: 4.5rem;
@@ -268,10 +275,10 @@ footer {
         text-align: center;
     }
 
-    section.contact {
+    /*section.contact {
         padding-top: 17em;
         padding-bottom: 17em;
-    }
+    }*/
 }
 
 // Mobile screens
@@ -284,14 +291,16 @@ footer {
         }
     }
 
+    /*
     section.TTC {
         padding-top: 13em;
         background-position: center;
-    }
+    }*/
 
+    /*
     section.contact {
         background-position: center;
-    }
+    }*/
     
     .video-container {
         position: relative;
@@ -318,8 +327,9 @@ footer {
         font-size: 12px;
     }
 
+    /*
     section.TTC {
         padding-top: 6em;
         background-position: center;
-    }
+    }*/
 }
